--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -45,3 +45,8 @@ RUN echo 'alias k="kubectl"' >> ~/.bashrc \
     && echo 'alias t="terraform"' >> ~/.bashrc \
     && echo 'alias la="ls -A"' >> ~/.bashrc \
     && echo 'alias l="ls -CF"' >> ~/.bashrc
+
+# Fix git safe.directory issue by setting up custom git config
+RUN echo '[safe]' >> ~/.gitconfig \
+    && echo '	directory = /workspace' >> ~/.gitconfig \
+    && echo 'export GIT_CONFIG_GLOBAL=/home/node/.gitconfig' >> ~/.bashrc
