--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "react-router build",
     "cf-typegen": "wrangler types",
+    "start": "wrangler dev",
     "deploy": "npm run build && wrangler deploy",
     "dev": "react-router dev --host",
     "lint": "eslint app --ext .js,.jsx,.ts,.tsx",
@@ -40,6 +41,6 @@
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "wrangler": "^4.13.2"
+    "wrangler": "^4.20.5"
   }
 }
