--- a/.github/workflows/lint-and-format.yml
+++ b/.github/workflows/lint-and-format.yml
@@ -1,13 +1,16 @@
-name: Lint and Format Check
+name: CI - Code Quality and Tests
 
 on:
   push:
     paths:
       - 'app/**'
+      - 'server/**'
       - 'package.json'
       - 'package-lock.json'
       - 'tsconfig.json'
       - 'eslint.config.js'
+      - 'vite.config.ts'
+      - 'vitest.config.ts'
       - '.github/workflows/lint-and-format.yml'
 
 jobs:
