【By ClaudeCode】GitHub Actions タイムライン表示機能を追加
- Kesin11/actions-timeline@v2 を使用
- 各ジョブの実行時間をタイムライン形式で可視化
- 必要な権限（actions: read）を設定
- 全ジョブ完了後に always() で実行

--- a/.github/workflows/ci-code-quality-and-tests.yml
+++ b/.github/workflows/ci-code-quality-and-tests.yml
@@ -159,3 +159,15 @@ jobs:
 
       - name: Build project
         run: npm run build
+
+  # 各ジョブの実行時間をタイムライン形式で表示する
+  timeline:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: [setup, typecheck, lint, format-check, test, build]
+    if: always()
+    permissions:
+      actions: read
+
+    steps:
+      - uses: Kesin11/actions-timeline@v2
