--- a/.github/workflows/ci-code-quality-and-tests.yml
+++ b/.github/workflows/ci-code-quality-and-tests.yml
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - uses: ./.github/actions/setup-node-cache
       
       - name: Cache node_modules
