--- a/.github/workflows/ci-code-quality-and-tests.yml
+++ b/.github/workflows/ci-code-quality-and-tests.yml
@@ -34,6 +34,9 @@ jobs:
     timeout-minutes: 10
     needs: setup
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - uses: ./.github/actions/setup-node-cache
 
       - name: Run TypeScript type check
@@ -44,6 +47,9 @@ jobs:
     timeout-minutes: 10
     needs: setup
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - uses: ./.github/actions/setup-node-cache
 
       - name: Run ESLint
@@ -54,6 +60,9 @@ jobs:
     timeout-minutes: 10
     needs: setup
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - uses: ./.github/actions/setup-node-cache
 
       - name: Check Prettier formatting
@@ -64,6 +73,9 @@ jobs:
     timeout-minutes: 10
     needs: setup
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - uses: ./.github/actions/setup-node-cache
 
       - name: Run unit tests
@@ -74,6 +86,9 @@ jobs:
     timeout-minutes: 10
     needs: [typecheck, lint, format-check, test]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - uses: ./.github/actions/setup-node-cache
 
       - name: Build project
