--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,8 @@
   "vars": {
     "SUPABASE_URL": "",
     "SUPABASE_ANON_KEY": "",
-    "DATABASE_URL": ""
-  }
+    "DATABASE_URL": "",
+    "VITE_SUPABASE_URL": "",
+    "VITE_SUPABASE_ANON_KEY": "",
+  },
 }
